--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include LICENSE
 include README.rst
-recursive-include smartmenus/static smartmenus/templates
+recursive-include smartmenus/static *
+recursive-include smartmenus/templates *
